# QShaderEditor

./: AUTHORS  CHANGELOG  CMakeLists.txt  README _RU  README.md  README_EN  changelog.html  index.html  params.json
data/shaders/: wiggle.glsl
src/: CMakeLists.txt  asmeffect.cpp  cgexplicit.cpp  cgfxeffect.cpp  completer.cpp  completer.h  configdlg.cpp  configdlg.h  document.cpp  document.h  editor.cpp  editor.h  editor_split.cpp  editor_split.h  effect.cpp  effect.h  finddialog.cpp  finddialog.h  glsleffect.cpp  glutils.cpp  glutils.h  gotodialog.h  highlighter.h  imageplugin.cpp  imageplugin.h  main.cpp  md5scene.h  messagepanel.cpp  messagepanel.h  newdialog.h  outputparser.h  parameter.cpp  parameter.h  parameterdelegate.cpp  parameterdelegate.h  parametermodel.cpp  parametermodel.h  parameterpanel.cpp  parameterpanel.h  qglview.cpp  (+11 more)
stylesheets/: stylesheet.css
